<?xml version="1.0" encoding="utf-8"?>  <!--
		* Copyright (C) 2007-2008 OpenIntents.org * * Licensed under the
		Apache License, Version 2.0 (the "License"); * you may not use this
		file except in compliance with the License. * You may obtain a copy of
		the License at * * http://www.apache.org/licenses/LICENSE-2.0 * *
		Unless required by applicable law or agreed to in writing, software *
		distributed under the License is distributed on an "AS IS" BASIS, *
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
		implied. * See the License for the specific language governing
		permissions and * limitations under the License.
	-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip">

        <EditText
            android:id="@+id/edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item"
            android:inputType="text"
            android:text="" />
        <!--
          android:layout_weight="1"
          android:capitalize="words"
        -->
        <LinearLayout
            android:id="@+id/quantity_and_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/labeleditquantity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/editquantity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labeleditquantity"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/labeleditunits"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/units" />

                <AutoCompleteTextView
                    android:id="@+id/editunits"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labeleditunits"
                    android:completionThreshold="1"
                    android:inputType="text"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/labeleditprice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/editprice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labeleditprice"
                    android:hint="0.00"
                    android:inputType="numberSigned|numberDecimal"
                    android:singleLine="true"
                    android:text="" />

                <Button
                    android:id="@+id/pricestore"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labeleditprice"
                    android:singleLine="true"
                    android:text="@string/menu_item_stores" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/labeledittag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_and_price"
            android:layout_weight="1"
            android:text="@string/tags" />

        <MultiAutoCompleteTextView
            android:id="@+id/edittags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labeledittag"
            android:hint="@string/tags"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/priority_and_note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittags"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/labeleditpriority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority" />

                <EditText
                    android:id="@+id/editpriority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labeleditpriority"
                    android:inputType="number"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/labeleditnote"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/note" />

                <ImageButton
                    android:id="@+id/note"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labeleditnote"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_launcher_notepad_small" />
            </RelativeLayout>
        </LinearLayout>
        <!--
        android:capitalize="words"
      -->
    </RelativeLayout>

</ScrollView>